Fixed events section mobile bug.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -246,7 +246,7 @@ header {
   }
 
   .left {
-    max-height: 30rem;
+    height: 30rem;
   }
   .left img {
     width: 100%;
